Life is Beautiful💜

--- a/bdc.html
+++ b/bdc.html
@@ -386,6 +386,10 @@
                         </div>
                     </div>
                 </div>
+                <div id="search-loading" class="search-loading hidden mt-6" aria-live="polite" aria-hidden="true">
+                    <span class="search-loading__spinner" aria-hidden="true"></span>
+                    <span class="search-loading__text">Loading donors...</span>
+                </div>
                 <div id="search-results" class="mt-6 flex flex-col gap-4">
                     <div class="text-gray-500 italic">No results yet. Perform a search to display donor entries here.
                     </div>
@@ -1017,6 +1021,7 @@
             </svg>
         </a>
     </div>
+
 </body>
 
 </html>
