--- a/bdc.html
+++ b/bdc.html
@@ -20,6 +20,18 @@
 </head>
 
 <body class="bg-white text-gray-900">
+    <!-- Full Page Loader -->
+    <div id="page-loader" class="fixed inset-0 z-[100] flex flex-col items-center justify-center bg-white bg-opacity-95 transition-all duration-500">
+        <div class="mb-6 flex flex-col items-center">
+            <span class="loader-icon-circle mb-4">
+                <span class="drops-row">
+                    <img src="image/blood-drop.png" alt="Blood Drop" class="drop-bounce" style="--i:0;" />
+                    <img src="image/blood-drop.png" alt="Blood Drop" class="drop-bounce" style="--i:1;" />
+                    <img src="image/blood-drop.png" alt="Blood Drop" class="drop-bounce" style="--i:2;" />
+                </span>
+            </span>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
