--- a/bdc.html
+++ b/bdc.html
@@ -380,7 +380,7 @@
                             quickly. Connect directly once you locate a match.</p>
                     </div>
                     <div
-                        class="w-full md:w-auto how-card compact search-card accent-sky float-in flex flex-col items-center md:items-start md:self-start gap-2">
+                        class="w-full md:w-auto how-card compact search-card accent-sky flex flex-col items-center md:items-start md:self-start gap-2">
                         <div class="flex items-center gap-2 -mb-1">
                             <div class="icon-circle-sm"><i class="fa-solid fa-magnifying-glass text-sm"
                                     aria-hidden="true"></i></div>
@@ -425,7 +425,7 @@
         </section>
 
         <section id="join" class="py-12">
-            <div class="how-card gentle tint-emerald accent-emerald rounded-xl shadow-lg p-8 max-w-lg mx-auto float-in">
+            <div class="how-card gentle tint-emerald accent-emerald rounded-xl shadow-lg p-8 max-w-lg mx-auto">
                 <div class="text-center flex flex-col items-center gap-2">
                     <div class="icon-circle"><i class="fa-solid fa-user-check text-xl" aria-hidden="true"></i></div>
                     <h2 class="text-2xl font-extrabold text-red-700" data-i18n="joinTitle">Join us as a donor</h2>
