Life is Beautiful💜

--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
                 </div>
                 <!-- Quick Links -->
                 <div>
-                    <h4 class="footer-col-title" data-i18n="footerQuickLinks">Quick Links</h4>
+                    <h4 class="footer-col-title">QUICK LINKS</h4>
                     <ul class="footer-links">
                         <li><a href="#about"><i class="fa-solid fa-chevron-right"></i> <span data-i18n="navAbout">About</span></a></li>
                         <li><a href="#how"><i class="fa-solid fa-chevron-right"></i> <span data-i18n="navHow">Donation Guide</span></a></li>
